# prek-test

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/: do_thing.py  models.py  polars_test.py
