[project]
name = "prek_test"
version = "0.1.0"
description = "A test project for prek"
authors = [
    { name = "Ryan Oldford", email = "ryan.oldford@berlinguettegroup.com" }
]
dependencies = [
    "pydantic>=2.12.0",
    "polars>=1.38.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.7",
    "prek>=0.3.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
message_length_limit = 80
retry_after_failure = true
